# youtube-auto-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: TODO.md
examples/: run_uploader.py
src/youtube_uploader/: __init__.py  cli.py  exceptions.py  models.py  utils.py  youtube.py
tests/: test_youtube.py
