[project]
name = "youtube-uploader"
version = "0.1.0"
description = "A personal automation package for YouTube uploads."
authors = [
    {name = "taketake-dev",email = "177946216+taketake-dev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "youtube_uploader", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
